--- a/front-web/package.json
+++ b/front-web/package.json
@@ -9,10 +9,16 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-select": "^4.0.13",
+    "axios": "^0.21.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-select": "^4.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
@@ -39,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.0",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
